--- a/src/components/HomepageSearch/HomepageSearch.module.scss
+++ b/src/components/HomepageSearch/HomepageSearch.module.scss
@@ -1,22 +1,22 @@
 .input {
-    font-size: 1.1rem;
-    padding: 16px 20px;
-    height: 56px;
-    color: #333;
+  font-size: 1.1rem;
+  padding: 16px 20px;
+  height: 56px;
+  color: #333;
+
+  &::placeholder {
+    color: rgba(51, 51, 51, 0.7);
+  }
+
+  :root[data-mantine-color-scheme='dark'] & {
+    color: #fff;
 
     &::placeholder {
-        color: rgba(51, 51, 51, 0.7);
+      color: rgba(255, 255, 255, 0.6);
     }
-
-    :root[data-mantine-color-scheme="dark"] & {
-        color: #fff;
-
-        &::placeholder {
-            color: rgba(255, 255, 255, 0.6);
-        }
-    }
+  }
 }
 
 .section {
-    width: 60px;
+  width: 60px;
 }
